@startuml

title __SYSTEM's Class Diagram__\n

      class System.InterfacesController {
          - interfaces : HashMap<String, Pane>
          - main : Stage
          + InterfacesController()
          + activate()
          + addInterface()
          + deactivate()
          + getInterface()
          + toFront()
      }


      class System.Main {
          {static} + main()
          + start()
      }

      class System.Sistema {
          - alarmControlStage : Stage
          - alarmCtlIsShown : boolean
          - alarmStage : Stage
          - errorStage : Stage
          - mediaPlayer : MediaPlayer
          - monitoringStage : Stage
          - random : Random
          {static} - s : Sistema
          - selectedPatient : int
          - sound : Media
          - store : Store<StringCommand>
          + endSystem()
          {static} + getInstance()
          + getInterface()
          + getMonitoringStage()
          + getSickPatient()
          + getStore()
          + setInterface()
          + setupUI()
          - Sistema()
          - createUI()
      }

      class System.Sistema.MediaThread {
          + run()
          - interruptSound()
      }

  System.Main -up-|> javafx.application.Application
  System.Sistema o-- System.InterfacesController : controller
  System.Sistema o-- System.Sistema.MediaThread : mt
  System.Sistema +-down- System.Sistema.MediaThread


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
